feat: query on genomic variants
